--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 
 <body>
-
+  <nav id="main_nav">
+    <div id="header_menu">
+      <a href="#" class="nav_links">Home</a>
+      <a href="#" class="nav_links">Últimas Edições</a>
+      <a href="#" class="nav_links">Requisitos Para Participar</a>
+    </div>
+    <button>Login</button>
+  </nav>
 </body>
 
 </html>
