--- a/index.html
+++ b/index.html
@@ -18,6 +18,55 @@
     </div>
     <button>Login</button>
   </nav>
+
+  <section>
+    <header>
+      <h1>BOOTCAMP DNC</h1>
+      <p>Esse será um evento exclusivo para todos os alunos <br>
+        da DNC que querem <span class="invert">acelerar a carreira</span> com uma <br>
+        semana intensiva de conteúdo de mercado entre <br>
+        <span class="invert">BACK-END, FRONT-END & BANCO DE DADOS</span>
+      </p>
+    </header>
+    <form action="">
+      <div class="form_group">
+        <label>Nome</label>
+        <input type="text" placeholder="Insira seu nome aqui">
+      </div>
+      <div class="form_group">
+        <label>Sobrenome</label>
+        <input type="text" placeholder="Insira seu sobrenome aqui">
+      </div>
+      <div class="form_group">
+        <label>Área de Interesse</label>
+        <div class="checkbox_itens">
+          <input type="checkbox" value="front">
+          <label>Front-end</label>
+
+          <input type="checkbox" value="back">
+          <label>Back-end</label>
+
+          <input type="checkbox" value="bd">
+          <label>Banco de Dados</label>
+        </div>
+      </div>
+      <div class="form_group">
+        <label>E-mail</label>
+        <input type="email" placeholder="Insira seu e-mail aqui">
+      </div>
+      <div class="form_group">
+        <label>Telefone</label>
+        <input type="text" placeholder="(99) 99999 - 9999">
+      </div>
+      <div class="form_group">
+        <label>Insira uma frase criativa aqui</label>
+        <input type="text" placeholder="Que frase criativa você gostaria de falar?">
+      </div>
+
+      <input type="submit" value="Cadastrar">
+
+    </form>
+  </section>
 </body>
 
 </html>
