--- a/index.html
+++ b/index.html
@@ -67,6 +67,60 @@
 
     </form>
   </section>
+
+  <footer>
+    <div class="footer_top">
+      <nav>
+        <h5>
+          Escola
+        </h5>
+        <ul>
+          <li>
+            <a href="#">Formação em Tecnologia</a>
+          </li>
+          <li>
+            <a href="#">Formação em Marketing</a>
+          </li>
+          <li>
+            <a href="#">Formação em Dados</a>
+          </li>
+          <li>
+            <a href="#">Formação em Projetos</a>
+          </li>
+          <li>
+            <a href="#">Formação em Produto</a>
+          </li>
+        </ul>
+      </nav>
+
+      <nav>
+        <h5>
+          Sobre a DNC
+        </h5>
+        <ul>
+          <li>
+            <a href="#">História</a>
+          </li>
+          <li>
+            <a href="#">Visão e Valores</a>
+          </li>
+          <li>
+            <a href="#">Trabalhe Conosco</a>
+          </li>
+          <li>
+            <a href="#">Conteúdo Gratuito</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="adress">
+        <span>© 2022 DTC Treinamentos & Consultoria LTDA | CNPJ: 27.995.577/0001-37 | R. Justino Cobra, 61 – Vila Ema | São José dos Campos – SP | CEP 12243-030</span>
+      </div>
+    </div>
+    <div class="footer_bottom">
+      <a href="#">Termos de Uso</a>
+      <a href="#">Política de Privacidade</a>
+    </div>
+  </footer>
 </body>
 
 </html>
